--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -14,13 +14,13 @@
             <nav id="header-nav" class="navbar navbar-default">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="index.html" class="pull-left">
+                        <a href="index.html" class="pull-left visible-md visible-lg">
                             <div id="logo-img" alt="Logo Image"></div>
                         </a>
 
-                        <!-- <div class="navbar-brand">
+                        <div class="navbar-brand visible-xs visible-sm" >
                             <a href="index.html"><h1>V Park</h1></a>
-                        </div> -->
+                        </div>
 
                         <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
                             <span class="sr-only">Toggle Navigation</span>
@@ -30,10 +30,10 @@
                         </button>
                     </div>
                     <div id="collapsable-nav" class="collapse navbar-collapse">
-                        <ul id="menu-list" class="nav navbar-nav">
+                        <ul id="menu-list" class="nav navbar-nav navbar-right">
                             <li class="visible-xs active">
                                 <a href="index.html">
-                                    <span class="glyphicon glyphicon-cutlery"></span>
+                                    <span class="glyphicon glyphicon-home"></span>
                                     Home
                                 </a>
                             </li>
@@ -60,9 +60,9 @@
                             </li>
 
                             <li>
-                                <a href=".html">
+                                <a href="b.html">
                                     <span class="glyphicon glyphicon-earphone"></span><br class="hidden-xs">
-                                    Register
+                                    Contact Us
                                 </a>
                             </li>
                         </ul>
@@ -79,8 +79,67 @@
             </div>
         </div>
         <section class="content content1">
-            <h2>Section 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, laudantium, quibusdam? Nobis, delectus, commodi, fugit amet tempora facere dolores nisi facilis consequatur, odio hic minima nostrum. Perferendis eos earum praesentium, blanditiis sapiente labore aliquam ipsa architecto vitae. Minima soluta temporibus voluptates inventore commodi cumque esse suscipit optio aliquam et, dolorem a cupiditate nihil fuga laboriosam fugiat placeat dignissimos! Unde eveniet placeat quisquam blanditiis voluptatem doloremque fugiat dolor repellendus ratione in. Distinctio provident dolorem modi cumque illo enim quidem tempora deserunt nostrum voluptate labore repellat quisquam quasi cum suscipit dolore ab consequuntur, ad porro earum temporibus. Laborum ad temporibus ex, omnis!</p>  
+            <div class="container">
+                <div id="row1" class="row">
+                    <div class="col-md-3">
+                        <div id="step1">
+                            <h2>Step 1</h2>
+                            <h1>Register with us</h1>
+                        </div>
+                        
+                        <!-- <span class="glyphicon glyphicon-arrow-right"></span> -->
+                    </div>
+                    <img class="next visible-lg" src="Images/next.svg" alt="Right arrow" width="40" height="30">
+                    <!-- <span class="glyphicon glyphicon-arrow-right"></span> -->
+                    <div class="col-md-3">
+                        <div id="step2">
+                            <h2>Step 2</h2>
+                            <h1>At the incident, click the picture of respective car no.</h1>
+                        </div>
+                    </div>
+                    <img class="next visible-lg" src="Images/next.svg" alt="Right arrow" width="40" height="30">
+                    <!-- <span class="glyphicon glyphicon-arrow-right"></span> -->
+                    <div class="col-md-3">
+                        <div id="step3">
+                            <h2>Step 3</h2>
+                            <h1>We'll provide you a phone no. if the person with that car no. has registered</h1>
+                        </div>
+                    </div>
+                    <img class="next visible-lg" src="Images/next.svg" alt="Right arrow" width="40" height="30">
+                    <!-- <div class="glyphicon glyphicon-arrow-down"></div> -->
+                    <div class="col-md-3">
+                        <div id="step4">
+                            <h2>Step 4</h2>
+                            <h1>Place a call on that no. Then, we'd redirect you to the defaulter.</h1>
+                        </div>
+                        <div id="down"><img class="next visible-lg" src="Images/down-arrow.svg" alt="Down arrow" width="40" height="30" style="display: block;"></div>
+                    </div>
+                    
+                </div>
+                <div id="row2" class="row">
+                    <div class="col-md-4">
+                        <div id="step7">
+                            <h2>Step 7</h2>
+                            <h1>Well, that's it!! Problem solved!</h1>
+                        </div>
+                    </div>
+                    <img class="next visible-lg" src="Images/back.svg" alt="Left arrow" width="40" height="30">
+                    <div class="col-md-4">
+                        <div id="step6">
+                            <h2>Step 5</h2>
+                            <h1>Then, the defaulter would come and move their vehicle from that place.</h1>
+                        </div>
+                    </div>
+                    <img class="next visible-lg" src="Images/back.svg" alt="Left arrow" width="40" height="30">
+                    <div class="col-md-4">
+                        <div id="step5">
+                            <h2>Step 5</h2>
+                            <h1>Now, you can talk to the defaulter yourself about the matter, with respect.</h1>
+                        </div>
+                    </div>
+
+                </div>
+            </div>  
         </section>
 
         <div class="img2">
@@ -114,5 +173,8 @@
                 </span> 
             </div>
         </div>
+
+        <script src="scripts/jquery-3.5.1.min.js"></script>
+        <script src="scripts/bootstrap.min.js"></script>
     </body>
 </html>
