--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -102,7 +102,7 @@
                     <div class="col-md-3">
                         <div id="step3">
                             <h2>Step 3</h2>
-                            <h1>We'll provide you a phone no. if the person with that car no. has registered</h1>
+                            <h1>We'd provide you a phone no. if the person with that car no. has registered</h1>
                         </div>
                     </div>
                     <img class="next visible-lg" src="Images/next.svg" alt="Right arrow" width="40" height="30">
